# like-bench

./: Cargo.toml  input.txt  result.txt
benches/: my_benchmark.rs
src/: lib.rs
