[package]
name = "like_bench"
version = "0.1.0"
authors = ["TennyZhuang <zty0826@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.1"

[profile.bench]
optimize-level = 3
lto = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
